--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./topic.css">
-    <title>Document</title>
+    <title>梅語小測驗</title>
 </head>
 <body>
+    <h1>歡迎來到梅語小測驗!</h1>
     <section class="inner-section">
         <h2 class="title">阿梅的生日是?</h2>
         <button class="option A">(A)11/22 </button>
@@ -24,6 +25,7 @@
         <p class="fail"></p>
         <p class="fail-content"></p>
     </section>
+   <h4> 說明: 題庫中總共有50題(陸續更新)，會隨機抽出25題每題4分，滿分100。</h4>
 </body>
 
 <script src="./Internet.js"></script>
