--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p class="fail"></p>
         <p class="fail-content"></p>
     </section>
-   <h4> 說明: 題庫中總共有50題(陸續更新)，會隨機抽出25題每題4分，滿分100。</h4>
+   <h4> 說明: 題庫中總共有70題，隨機抽出25題每題4分，滿分100。</h4>
 </body>
 
 <script src="./Internet.js"></script>
