--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./topic.css">
-    <title>梅語小測驗</title>
+    <title>英文期末考單字</title>
 </head>
 <body>
-    <h1>歡迎來到梅語小測驗!</h1>
+    <h1>英文期末考單字</h1>
     <section class="inner-section">
         <h2 class="title">阿梅的生日是?</h2>
         <button class="option A">(A)11/22 </button>
         <button class="option B">(B)11/24 </button>
         <button class="option C">(C)11/26 </button>
         <button class="option D">(D)11/29 </button>
-        <h3 class="grade">共20題，目前是第1題，共得到:0分</h3>
+        <h3 class="grade">共50題，目前是第1題，共得到:0分</h3>
     </section>
     <section >
         <button class="end">重新開始</button>
@@ -25,7 +25,7 @@
         <p class="fail"></p>
         <p class="fail-content"></p>
     </section>
-   <h4> 說明: 題庫中總共有70題，隨機抽出20題每題5分，滿分100。</h4>
+   <h4> 說明: 題庫中總共有72題，隨機抽出50題每題2分，滿分100。</h4>
 </body>
 
 <script src="./Internet.js"></script>
